src/objects/Star_Rating_Review__c.object
<CustomObject>
    <fields>
        <fullName>ADM_HTML_Text__c</fullName>
        <description>Free-form text field for Star Ratings</description>
        <label>ADM HTML Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Star_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Added_Decor_Pieces_Custom_Cabinetry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Added Décor Pieces &amp; Custom Cabinetry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Added_In_room_Electronics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Added In-room Electronics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjustable_Reading_Lamps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Adjustable Reading Lamps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Star_Rating__c</fullName>
        <label>Assigned Star Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automatic_TD_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Automatic TD Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Cafe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Basic Cafe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Shower_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Basic Shower Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_Sitting_Chair_In_room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Basic Sitting Chair In-room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathrobes_In_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Bathrobes In-Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathroom_Artwork__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Bathroom Artwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathrooms_Clad_In_Marble_Granite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Bathrooms Clad In Marble / Granite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bedside_Lamps_Attached_to_Wall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Bedside Lamps Attached to Wall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blackout_Drapes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Blackout Drapes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Butler_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Butler Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_Satellite_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Cable / Satellite TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Star_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Combo_Tub_Shower__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Combo Tub / Shower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complimentary_Toiletries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Complimentary Toiletries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continental_Breakfast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continental Breakfast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cushioned_Pool_Deck_Furniture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Cushioned Pool Deck Furniture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DVD_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>DVD Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dedicated_Breakfast_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Dedicated Breakfast Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_w_Chair_on_Both_Sides__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Desk w/Chair on Both Sides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_with_Professional_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Desk with Professional Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_with_Standard_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Desk with Standard Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doorman__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Doorman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dual_Sink_Vanity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Dual Sink Vanity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elegant_or_Fine_Dining_Restaurant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Elegant or Fine Dining Restaurant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expanded_Bathroom_Counter_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Expanded Bathroom Counter Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expanded_Breakfast_with_2_Hot_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy gatekeeper item</description>
        <label>Expanded Breakfast with 2 Hot Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fitness_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Fitness Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Standing_Bedside_Lamps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Free Standing Bedside Lamps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Kitchen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate</description>
        <label>Full Kitchen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_service_Spa_facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Full-service Spa Facilities &amp; Fitness Rm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_room_Safe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>In-room Safe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_Rating_Source__c</fullName>
        <description>Need more info from Scott about this field</description>
        <label>Join Rating Source</label>
        <picklist>
            <picklistValues>
                <fullName>AA (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA (Australia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA (North America)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministry of Tourism/Regional Tourist Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualmark (New Zealand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAC (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Rated/No Official Rating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kitchenette__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate</description>
        <label>Kitchenette</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limited_Hour_Room_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Limited Hour Room Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Massage_Treatment_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Massage Treatment Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microwave_In_room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Microwave In-room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mini_fridge_In_room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Mini-fridge In-room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Quality_Restaurant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Moderate Quality Restaurant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Quality_Sitting_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Moderate Quality Sitting Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moderate_Quality_Solid_Wood_Furniture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Moderate Quality Solid Wood Furniture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Moderate_Quality_Restaurants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Multiple Moderate Quality Restaurants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating a National Rating</description>
        <label>National Rating?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oversized_Headboard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Oversized Headboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Requested_Star_Rating__c</fullName>
        <description>Partner Requested Star Rating</description>
        <label>Partner Requested Star Rating</label>
        <picklist>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pedestal_Sink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Pedestal Sink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plasma_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Plasma TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Quality_Bedding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Items</description>
        <label>Premium Quality Bedding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Quality_Furnishings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Premium Quality Furnishings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Quality_Lobby_Furnishings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Premium Quality Lobby Furnishings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Bathrooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Private Bathrooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Web_Address__c</fullName>
        <inlineHelpText>Use this field to add the property&apos;s web address.  This field will hold ONE web address.</inlineHelpText>
        <label>Property Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Review_Method__c</fullName>
        <description>How the review was conducted.</description>
        <label>Review Method</label>
        <picklist>
            <picklistValues>
                <fullName>Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Audit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Requested_By__c</fullName>
        <label>Review Requested By</label>
        <picklist>
            <picklistValues>
                <fullName>Required by Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Ratings Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_complete__c</fullName>
        <label>Review completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicated if review is complete</description>
        <label>Review complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewers_Notes__c</fullName>
        <description>Area for reviewer to add text &amp; photos to support review.</description>
        <label>Reviewers Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Room_Service_24_Hour__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>24-Hour Room Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room_Sevice_24_hour_w_Hot_Food__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>24-hour Room Service w/Hot Food</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Separate_Tub_and_Shower__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Separate Tub and Shower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_Bathrooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Shared Bathrooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slippers_In_room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Slippers In-room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Bedding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Standard Bedding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Pool_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Standard Pool Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_TV_Attached_to_Wall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Standard TV Attached to Wall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Standard TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stocked_Mini_bar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Stocked Mini-bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stone_Bathroom_Counter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Stone Bathroom Counter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Star Rating Reviews</relationshipLabel>
        <relationshipName>Star_Rating_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toilet_Housed_in_Separate_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Toilet Housed in Separate Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uniformed_Bellman__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moderate Quality Gatekeeper Item</description>
        <label>Uniformed Bellman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Bedding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Economy Gatekeeper Item</description>
        <label>Updated Bedding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Bedding_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Bedding Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Lobby_with_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Lobby with Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Over_Stuffed_Sitting_Chair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Over-Stuffed Sitting Chair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Pool_w_Unique_Design_Features__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Pool w/Unique Design Features</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Restaurant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Restaurant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upscale_Spa__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Upscale Spa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valet_Parking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale Gatekeeper Item</description>
        <label>Valet Parking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_Scale_In_room__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Weight Scale In-room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_amenities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Premium / Luxury Gatekeeper Item</description>
        <label>Welcome Amenities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iPod_Docking_Station__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Upscale</description>
        <label>iPod Docking Station</label>
        <type>Checkbox</type>
    </fields>
    <label>Star Rating Review</label>
    <listViews>
        <fullName>All_Star_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Assigned_Star_Rating__c</columns>
        <columns>National_Rating__c</columns>
        <columns>Review_Method__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Star Reviews</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_SR_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_Star_Rating__c</columns>
        <columns>National_Rating__c</columns>
        <columns>Structure_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_complete__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Incomplete SR Reviews</label>
        <sharedTo>
            <group>Star Ratings</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Incomplete_Star_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Billing_City__c</columns>
        <columns>Account_Billing_Country__c</columns>
        <columns>Review_complete__c</columns>
        <columns>Assigned_Star_Rating__c</columns>
        <columns>National_Rating__c</columns>
        <columns>Review_Method__c</columns>
        <columns>Review_Requested_By__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Review_complete__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>Incomplete Star Reviews</label>
        <sharedTo>
            <group>Administrators</group>
            <group>Star Ratings</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Star Ratings Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Star Rating Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>